<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_encomenda"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_encomenda" />

    <item
        android:id="@+id/navigation_venda"
        android:icon="@android:drawable/sym_action_email"
        android:color="@color/black"
        android:title="@string/title_venda" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:color="@color/black"
        android:title="@string/title_user" />

</menu>